src/test/ui/rfc-2008-non-exhaustive/uninhabited/indirect_match_same_crate.stderr
error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedEnum` is non-empty
  --> $DIR/indirect_match_same_crate.rs:34:11
   |
LL | pub struct IndirectUninhabitedEnum(UninhabitedEnum);
   | ---------------------------------------------------- `IndirectUninhabitedEnum` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedStruct` is non-empty
  --> $DIR/indirect_match_same_crate.rs:38:11
   |
LL | pub struct IndirectUninhabitedStruct(UninhabitedStruct);
   | -------------------------------------------------------- `IndirectUninhabitedStruct` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedTupleStruct` is non-empty
  --> $DIR/indirect_match_same_crate.rs:42:11
   |
LL | pub struct IndirectUninhabitedTupleStruct(UninhabitedTupleStruct);
   | ------------------------------------------------------------------ `IndirectUninhabitedTupleStruct` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: type `IndirectUninhabitedVariants` is non-empty
  --> $DIR/indirect_match_same_crate.rs:48:11
   |
LL | pub struct IndirectUninhabitedVariants(UninhabitedVariants);
   | ------------------------------------------------------------ `IndirectUninhabitedVariants` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
